test/Fail/Issue5781c.agda
{-# OPTIONS --profile=modules --profile=internal #-}
