test/Fail/Issue5781c.err
Issue5781c.agda:1,1-53: error: [GenericError]
Cannot use profiling option 'internal' with 'modules'
